Fixes sweet alert buttons on mobile

--- a/app/styles/_modules/_buttons.scss
+++ b/app/styles/_modules/_buttons.scss
@@ -203,3 +203,11 @@
 		}
 	}
 }
+
+
+.sweet-alert button {
+	border-width: 1px;
+	font-size: em(14);
+	padding: em(12) em(50);
+	width: inherit;
+}
